--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 #text-perfume {
     margin: 0px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Hanken Grotesk', sans-serif;
     font-size: 16px;
     color: hsl(228, 12%, 48%);
 }
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-decoration: line-through;
 }
 #number-new-price {
     margin: 0px;
@@ -76,7 +77,7 @@
 
 #perfume {
     margin-top: 20px;
-    margin-left: -200px;
+    margin-left: -224px;
 }
 #btn-text {
     margin-left: 8px;
