--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+.total-box {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.attribution {
+    margin: 30px
+}
+
 #principal-box {
     width: 375px;
     height: 667px;
@@ -101,4 +111,15 @@
     margin-right: 8px;
     width: 20px;
     height: 18px;
+}
+
+@media (min-width:375px) {
+    #principal-box {
+            width: 1440px;
+            height: 667px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: hsl(30, 38%, 92%);
+        }
 }
