--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@
     height: 250px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    
 }
+
 
 .white-box {
     width: 340px;
@@ -51,7 +51,8 @@
 }
 #text-perfume {
     margin: 0px;
-    font-family: 'Hanken Grotesk', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: inherit;
     font-size: 16px;
     color: hsl(228, 12%, 48%);
 }
@@ -93,6 +94,7 @@
     margin-left: 8px;
     color: white;
     font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
 }
 #btn {
     border-radius: 10px;
@@ -114,12 +116,124 @@
 }
 
 @media (min-width:375px) {
-    #principal-box {
+    .total-box {
             width: 1440px;
             height: 667px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             background: hsl(30, 38%, 92%);
         }
+    .imaginary-box{
+            width: 600px;
+            height: 450px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            
+        }
+
+    .white-box {
+            width: 300px;
+            height: 450px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            background-color: hsl(0, 0%, 100%);
+            border-radius: 0px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+    }
+    .img-chanel {
+            width: 300px;
+            height: 450px;
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+    }
+   
+    #title {
+            margin-left: 25px;
+            margin-right: 30px;
+    }
+
+    #paragraph {
+            margin-left: 26px;
+            margin-right: 30px;
+            text-align: start;
+            font-family: 'Montserrat', sans-serif;
+            color: hsl(228, 12%, 48%);
+            font-size: 14px;
+    }
+
+    .paragraph-box {
+            width: 300px;
+            height: 100px;
+    }
+
+    #text-perfume {
+        font-size: 10px;
+            width: 300px;
+            margin-left: 50px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: inherit;
+            font-size: 16px;
+            color: hsl(228, 12%, 48%);
+    }
+    
+    #perfume {
+            margin-top: 18px;
+            margin-left: 0px;
+    }
+
+    .price {
+            width: 210px;
+            height: 40px;
+            margin-left: -40px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+    
+    }
+    
+    #old-price {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-decoration: line-through;
+    }
+    
+    #number-new-price {
+            margin: 0px;
+            font-family: 'Fraunces', serif;
+            color: hsl(138, 54%, 33%);
+    }
+
+    #btn-text {
+            margin-left: 8px;
+            color: white;
+            font-weight: bold;
+            font-family: 'Montserrat', sans-serif;
+    }
+    
+    #btn {
+            border-radius: 10px;
+            background-color: hsl(138, 54%, 33%);
+            margin-left: -12px;
+            margin-bottom: 15px;
+            width: 235px;
+            height: 50px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+    
+    
+    }
+    
+    .img-cart {
+            margin-right: 8px;
+            width: 18px;
+            height: 15px;
+     }
 }
