done with responsive

--- a/style.css
+++ b/style.css
@@ -22,13 +22,20 @@
     height: 615px;
 }
 
-.img-chanel {
+.img-chanel-mobile {
     width: 340px;
     height: 250px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
 
+.img-chanel-desktop {
+    display:none;
+    width: 300px;
+    height: 450px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
 
 .white-box {
     width: 340px;
@@ -145,11 +152,19 @@
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
     }
-    .img-chanel {
-            width: 300px;
-            height: 450px;
+    .img-chanel-mobile {
+        display:none;
+            width: 340px;
+            height: 250px;
             border-top-right-radius: 10px;
             border-top-left-radius: 10px;
+    }
+    .img-chanel-desktop {
+            display: inline;
+            width: 300px;
+            height: 450px;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
     }
    
     #title {
